--- a/jeopardynew.html
+++ b/jeopardynew.html
@@ -34,6 +34,5 @@
 </body>
 </html>
 
-<!-- click to restart text -->
-<!-- change colors for question / answer -->
-<!-- other ways to make it prettier? -->
+<!--instruction: click to restart text -->
+<!-- supposed to change colors for question / answer -->
